hphp/test/zend/bad/ext/mcrypt/tests/mcrypt_module_open.php
<?php
var_dump(mcrypt_module_open(MCRYPT_RIJNDAEL_256, '', MCRYPT_MODE_CBC, ''));
mcrypt_module_open('', '', '', '');
